# meditation_timer

./: .gitignore  README.md
.github/workflows/: meditimer-api.yaml  meditimer-job.yaml
app/: .gitignore  l10n.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: ai_logic.dart  base_logic.dart  main.dart  player.dart  timer_logic.dart  utils.dart
app/lib/entities/: advanced_meditation_session.dart  ai_meditation_session.dart  ai_page_mode.dart  app_settings.dart  app_style.dart  custom_schedule.dart  interruption_filter_enum.dart  language_enum.dart  meditation_info.dart  meditation_script.dart  platform_method_channel.dart  pranayama_session.dart  ringer_mode_enum.dart  scheduling_mode.dart  script_item.dart  script_phase.dart  script_phase_item.dart  sound_event.dart  timer_page_mode.dart  unguided_meditation_session.dart
app/lib/infrastructure/: locator.dart
app/lib/service/: ai_meditation_service.dart  device_service.dart  locale_service.dart  settings_service.dart  storage_service.dart  system_channel_service.dart  theme_service.dart  tips_service.dart  transport_service.dart  wallet_service.dart
app/lib/views/: ai_meditation_list_view.dart  (+7 more)
app/test/: widget_test.dart
server/: .gitignore  Cargo.toml  app_config.test.toml  test_data.json
server/src/: lib.rs  logger.rs  main.rs
server/src/cmd/api/: .gitignore  Cargo.toml  Dockerfile  api_config.test.toml  app_config.test.toml
server/src/cmd/api/src/: main.rs
server/src/cmd/api/tests/: live_test.rs  test.rs
server/src/cmd/app/: .gitignore  Cargo.toml  app_config.test.toml
server/src/cmd/app/src/: main.rs
server/src/cmd/app/tests/: test.rs
server/src/cmd/job/: .gitignore  Cargo.toml  Dockerfile  app_config.test.toml  job_config.test.toml
server/src/cmd/job/src/: main.rs
server/src/cmd/job/tests/: test.rs
server/src/entities/: app_state.rs  config.rs  error.rs  language.rs  meditation_script.rs  meditation_script_info.rs  meditation_style.rs  mod.rs  statistic.rs  statistic_data.rs
server/src/infrastructure/: app.rs  mod.rs  server.rs
server/src/infrastructure/api/: api_config.rs  api_state.rs  get_meditation.rs  get_meditation_list.rs  get_meditation_script.rs  health_check.rs  mod.rs
server/src/infrastructure/api/common/: api_error.rs  api_response.rs  api_result.rs  json_or_form.rs  mod.rs
server/src/infrastructure/api/requests/: meditation_script_request.rs  mod.rs
server/src/infrastructure/job/: daily_cleanup.rs  daily_meditation_populate.rs  job_config.rs  job_state.rs  mod.rs
server/src/pkg/: converters.rs  figment_string.rs  mod.rs
server/src/service/: mod.rs
server/src/service/data_cache/: mod.rs
server/src/service/gemini/: mod.rs
server/src/service/solana/: mod.rs
server/src/service/tts/: mod.rs
server/src/service/tts/ssml/: advanced_voice_options.rs  audio_config.rs  audio_encoding.rs  custom_pronunciation_params.rs  custom_pronunciations.rs  custom_voice_params.rs  input.rs  mod.rs  multi_speaker_markup.rs  phonetic_encoding.rs  request.rs  response.rs  ssml_voice_gender.rs  turn.rs  voice_clone_params.rs  voice_selection_params.rs
server/tests/: test.rs
(+60 files in other folders)
