[package]
name = "meditimer-core"
version = "0.3.4"
edition = "2021"

[dependencies]
thiserror = "1.0"
log = "0.4.27"
log4rs = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
figment = { version = "0.10", features = ["toml", "json", "env"] }
tokio =  { version = "1.45.1", features = ["full"] }
futures = { version = "0.3", optional = true }
redis = "0.31.0"
bb8 = "0.9.0"
bb8-redis = "0.23.0"
chrono = "0.4.41"
gemini-rs = { version = "2.0.0", optional = true }
reqwest = { version = "0.12.19", features = ["stream", "json", "native-tls"], default-features = false, optional = true }
solana-pubkey                = { version = "2", features = ["curve25519"], optional = true }
tokio-cron-scheduler = { version = "0.14.0", optional = true }
axum = { version = "0.8.4", optional = true }
hyper = { version = "1.6", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.13", features = ["server", "server-auto", "tokio", "client", "http1", "client-legacy"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["trace", "compression-gzip"], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[dependencies.base64]
version = "0.22.1"

[dev-dependencies]
base64 = "0.22.1"
http-body-util = "0.1.3"
mime = "0.3.17"

[features]
default = ["api", "app", "job"]
api = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tracing-subscriber", "dep:futures", "dep:hyper", "dep:hyper-util", "dep:reqwest", "dep:solana-pubkey"]
app = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tracing-subscriber", "dep:futures", "dep:hyper", "dep:hyper-util"]
job = ["dep:tokio-cron-scheduler", "dep:reqwest", "dep:gemini-rs"]