[package]
name = "meditimer-job"
version = "0.3.2"
edition = "2021"

[dependencies]
ctrlc = "3.4.7"
log = "0.4.27"
tokio =  { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = { version = "0.14.0" }
meditimer-core ={ path = "../../../", features = ["job"] }

[profile.release]
opt-level = "s"
lto = true
#strip = "debuginfo" # or "symbols"