[package]
name = "meditimer-job"
version = "0.3.3"
edition = "2021"

[dependencies]
log = "0.4.27"
tokio =  { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = { version = "0.14.0" }
meditimer-core ={ path = "../../../", features = ["job"] }

[profile.release]
opt-level = "s"
lto = true
#strip = "debuginfo" # or "symbols"